--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -21,26 +21,26 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <!--<RowDefinition Height="*" />-->
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <TextBlock Text="Start X:" Grid.Row="0" Margin="0,5" Height="18" />
             <TextBox x:Name="txtStartX" Grid.Row="0" Grid.Column="1" Margin="3" Text="{Binding StartingX}"/>
 
             <TextBlock Text="End X:" Grid.Row="1" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtEndX" Grid.Row="1" Grid.Column="1" Margin="3" />
+            <TextBox x:Name="txtEndX" Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding EndingX}"/>
 
             <TextBlock Text="Start Y:" Grid.Row="2" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtStartY" Grid.Row="2" Grid.Column="1" Margin="3" />
+            <TextBox x:Name="txtStartY" Grid.Row="2" Grid.Column="1" Margin="3" Text="{Binding StartingY}"/>
 
             <TextBlock Text="End Y:" Grid.Row="3" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" />
+            <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding EndingY}"/>
 
-            <!--<Button x:Name="Save" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top" Margin="3"
-                    Width="80" Height="25"
-                    Content="Save" />-->
+            <!-- Collapsed  -->
+            <Border x:Name="dispSecMapCoordsCommit" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0.5" BorderBrush="Black" Visibility="Visible" >
+                <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
+            </Border>
+            
         </Grid>
                         
                         
