--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -9,40 +9,45 @@
 
     <!--d:DesignHeight="250" d:DesignWidth="250"-->
     <Grid>
-        
-        <Grid Margin="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="42" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-            <TextBlock Text="Start X:" Grid.Row="0" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtStartX" Grid.Row="0" Grid.Column="1" Margin="3" Text="{Binding StartingX}"/>
+        <Border Grid.Row="0" BorderThickness="0.5" BorderBrush="Black" Margin="5,5,5,0">
+            <Grid  Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="42" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-            <TextBlock Text="End X:" Grid.Row="1" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtEndX" Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding EndingX}"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
 
-            <TextBlock Text="Start Y:" Grid.Row="2" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtStartY" Grid.Row="2" Grid.Column="1" Margin="3" Text="{Binding StartingY}"/>
+                <TextBlock Text="Start X:" Grid.Row="0" Margin="0,5" Height="18" />
+                <TextBox x:Name="txtStartX" Grid.Row="0" Grid.Column="1" Margin="3" Text="{Binding StartingX}"/>
 
-            <TextBlock Text="End Y:" Grid.Row="3" Margin="0,5" Height="18" />
-            <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding EndingY}"/>
+                <TextBlock Text="End X:" Grid.Row="1" Margin="0,5" Height="18" />
+                <TextBox x:Name="txtEndX" Grid.Row="1" Grid.Column="1" Margin="3" Text="{Binding EndingX}"/>
 
-            <!-- Collapsed  -->
-            <Border x:Name="dispSecMapCoordsCommit" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0.5" BorderBrush="Black" Visibility="Visible" >
-                <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
-            </Border>
-            
-        </Grid>
-                        
-                        
+                <TextBlock Text="Start Y:" Grid.Row="2" Margin="0,5" Height="18" />
+                <TextBox x:Name="txtStartY" Grid.Row="2" Grid.Column="1" Margin="3" Text="{Binding StartingY}"/>
+
+                <TextBlock Text="End Y:" Grid.Row="3" Margin="0,5" Height="18" />
+                <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding EndingY}"/>
+
+            </Grid>
+        </Border>
+
+        <!-- Collapsed  -->
+        <Border Grid.Row="1" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Visible" Margin="5,0,5,0">
+            <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
+        </Border>
+
     </Grid>
 </UserControl>
