--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -45,7 +45,7 @@
         </Border>
 
         <!-- Collapsed  -->
-        <Border Grid.Row="1" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Visible" Margin="5,0,5,0">
+        <Border Grid.Row="1" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Collapsed" Margin="5,0,5,0">
             <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
         </Border>
 
