--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -27,6 +27,7 @@
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <TextBlock Text="Start X:" Grid.Row="0" Margin="0,5" Height="18" />
@@ -41,11 +42,16 @@
                 <TextBlock Text="End Y:" Grid.Row="3" Margin="0,5" Height="18" />
                 <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding EndingY}"/>
 
+                <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5">
+                    <TextBlock Text="Zoom:" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0" Height="18" />
+                    <TextBlock x:Name="txtResolution" Text="{Binding Zoom}" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5,0" Height="18" />
+                </StackPanel>
+
             </Grid>
         </Border>
 
         <!-- Collapsed  -->
-        <Border Grid.Row="1" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Collapsed" Margin="5,0,5,0">
+        <Border Grid.Row="5" x:Name="dispSecMapCoordsCommit" BorderThickness="0.5, 0, 0.5, 0.5" BorderBrush="Black" Visibility="Collapsed" Margin="5,0,5,0">
             <Button x:Name="Save" HorizontalAlignment="Center" VerticalAlignment="Top" Width="80" Height="20" Margin="5" Content="Save" Click="SaveButton_Click" />
         </Border>
 
