Added Resolution field to the XAML UserControl: MapCoordsControl

--- a/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
+++ b/src/MSetExplorer/MSetInfo/MapCoordsControl.xaml
@@ -43,7 +43,12 @@
                 <TextBox x:Name="txtEndY" Grid.Row="3" Grid.Column="1" Margin="3" Text="{Binding EndingY}"/>
 
                 <TextBlock Text="Zoom:" Grid.Row="4" Margin="0,5" Height="18" />
-                <TextBlock x:Name="txtResolution" Grid.Row="4" Grid.Column="1" Margin="3" Text="{Binding Zoom, StringFormat={}{0:n0}}"/>
+
+                <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" Margin="3">
+                    <TextBlock x:Name="txtZoom" Text="{Binding Zoom, StringFormat={}{0:n0}}" Margin="0,0,10,0"/>
+
+                    <TextBlock x:Name="txtPrecision" Text="{Binding Precision, StringFormat={}{0:n0}}" Background="LightGray"/>
+                </StackPanel>
 
                 <!--<StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5">
                     <TextBlock Text="Zoom:" Margin="0" Height="18" />
