--- a/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
+++ b/src/MSetExplorer/ColorBand/ColorBandUserControl.xaml
@@ -35,13 +35,15 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
+
                 <TextBlock Width="69" Margin="5,2,5,5" FontSize="14" Text="Start Color:" />
                 <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=CurrentColorBand.StartColor}" Width="63" Height="21" Margin="2,0,3,5"/>
-                <!--<TextBox Text="{Binding Path=SelectedColorBand.StartColor.CssColor}" Width="65" VerticalAlignment="Center"/>-->
 
                 <TextBlock Width="65" Margin="5,2,5,5" FontSize="14" Text="End Color:" />
-                <!--<TextBox Text="{Binding Path=SelectedColorBand.ActualEndColor.CssColor}"  Width="65" VerticalAlignment="Center"/>-->
-                <local:ColorBandColorButtonControl ColorBandColor="{Binding Path=CurrentColorBand.ActualEndColor}" Width="63" Height="21" Margin="0,0,0,5"/>
+                <local:ColorBandColorButtonControl Width="63" Height="21" Margin="0,0,0,5"
+                    ColorBandColor="{Binding Path=CurrentColorBand.ActualEndColor}" 
+                    BlendStyle="{Binding Path=CurrentColorBand.BlendStyle}"/>
+                                                   
             </StackPanel>
 
         </StackPanel>
