--- a/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
+++ b/src/MSetExplorer/ProjectOpenSaveDialog/ProjectOpenSaveWindow.xaml
@@ -52,6 +52,7 @@
             <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
                 <Button Name="btnSave" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="SaveButton_Click" IsDefault="True" >Save</Button>
                 <Button Name="btnClose" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="10" Click="CloseButton_Click" IsCancel="True">_Cancel</Button>
+                <Button Name="btnDelete" HorizontalAlignment="Center" Width="100" FontSize="16" Margin="30,10, 10, 10" Click="DeleteButton_Click">_Delete</Button>
             </StackPanel>
 
         </Border>
